--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3011
 REACT_APP_JSON_BASE_URL=http://localhost:3021
 REACT_APP_JSON_PRODUCT_URL= https://dummyjson.com
 REACT_APP_LOGIN_BASE_URL=https://conduit.productionready.io
+REACT_APP_PLATZI_PRODUCT_URL=https://api.escuelajs.co
